--- a/Project 8 Form Wave Animation/style.css
+++ b/Project 8 Form Wave Animation/style.css
@@ -18,9 +18,11 @@ body {
 }
 
 .container { /* container的样子 */
+  display: none;
   background-color: rgba(0, 0, 0, 0.4);
   padding: 20px 40px;
   border-radius: 5px;
+  position: relative
 }
 
 .container h1 { /* container里面的字的样子 */
@@ -97,4 +99,28 @@ body {
 .form-control input:valid + label span {
   color: lightblue;
   transform: translateY(-30px); /* negative to move up */
+}
+
+.container .close-btn {
+  position: absolute;
+  right: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.1s ease;
+}
+
+.close-btn:hover {
+  color: #3498db;
+}
+
+.show-btn {
+  cursor:pointer;
+}
+
+#show:checked ~ .container {
+  display: block;
+}
+
+input[type="checkbox"] {
+  display: none;
 }
